--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 <body>
-<div>
+<div class="container">
     <div class="top">
         <h2><a href="/">接口测试</a> / 接口测试2 / <a href="/interface">接口测试3</a></h2>
     </div>
@@ -22,7 +22,7 @@
                 <label for="recipient-name" class="control-label">加密后文件保存路径，带文件名:</label>
                 <input type="text" class="form-control" id="encryption">
             </div>
-            <button type="button" class="btn btn-default" onclick="EncryptFile()">对称加密</button>
+            <button type="button" class="btn btn-primary" onclick="EncryptFile()">对称加密</button>
         </div>
     </div>
     <div class="panel panel-default">
@@ -39,34 +39,87 @@
                 <label for="recipient-name" class="control-label">解密后文件保存路径，带文件名:</label>
                 <input type="text" class="form-control" id="decryptedFiles">
             </div>
-            <button type="button" class="btn btn-default" onclick="DevryptFile()">对称解密</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">对称解密</button>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="rsKey" class="control-label">待加密明文，32位长度:</label>
+                <input type="text" class="form-control" id="rsKey">
+            </div>
+            <div class="form-group">
+                <label for="certBase64" class="control-label">证书base64编码:</label>
+                <input type="text" class="form-control" id="certBase64">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="KeyEncryptData()">非对称加密</button>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="encRsKey" class="control-label">待解密的密文:</label>
+                <input type="text" class="form-control" id="encRsKey">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="KeyEncryptData()">非对称解密</button>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="souceFilePath" class="control-label">原文路径，带文件名:</label>
+                <input type="text" class="form-control" id="souceFilePath">
+            </div>
+            <div class="form-group">
+                <label for="encFilePath" class="control-label">加密后的密文保存路径，带文件名:</label>
+                <input type="text" class="form-control" id="encFilePath">
+            </div>
+            <div class="form-group">
+                <label for="certBase" class="control-label">证书base64编码:</label>
+                <input type="text" class="form-control" id="certBase">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="KeyEncryptByDigitalEnvelope()">数字信封加密</button>
+        </div>
+    </div>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="form-group">
+                <label for="encFilePath2" class="control-label">要解密的文件路径，带文件名:</label>
+                <input type="text" class="form-control" id="encFilePath2">
+            </div>
+            <div class="form-group">
+                <label for="dncDirectory" class="control-label">解密后文件保存路径，不带文件名:</label>
+                <input type="text" class="form-control" id="dncDirectory">
+            </div>
+            <div class="form-group">
+                <label for="encRsKeyPath" class="control-label">对称密钥信息文件路径，带文件名:</label>
+                <input type="text" class="form-control" id="encRsKeyPath">
+            </div>
+            <button type="button" class="btn btn-primary" onclick="KeyDecryptByDigitalEnvelope()">数字信封解密</button>
         </div>
     </div>
 
-    <button type="button" class="btn btn-default" onclick="KeyEncryptData()">非对称加密</button>
-    <button type="button" class="btn btn-default" onclick="KeyDecryptData()">非对称解密</button>
-    <button type="button" class="btn btn-default" onclick="KeyEncryptByDigitalEnvelope()">数字信封加密</button>
-    <button type="button" class="btn btn-default" onclick="KeyDecryptByDigitalEnvelope()">数字信封解密</button>
-</div>
-<div class="modal fade" tabindex="-1" role="dialog" id="mymodel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="text">Modal title</h4>
-            </div>
-            <div class="modal-body">
-                <h4 class="text-success" id="text1"></h4>
-                <h4 class="text-success" id="text2"></h4>
-                <h4 class="text-success" id="text3"></h4>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
 
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="mymodel">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title" id="text">Modal title</h4>
+                </div>
+                <div class="modal-body">
+                    <h4 class="text-success" id="text1"></h4>
+                    <h4 class="text-success" id="text2"></h4>
+                    <h4 class="text-success" id="text3"></h4>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                </div>
+            </div><!-- /.modal-content -->
+        </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+</div>
 </body>
 <script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
 <script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
@@ -125,7 +178,9 @@
                 certBase64:"zcxv"
             },
             success:function(res){
+                $("#text").html("3.2.2.14.非对称加密接口");
                 JudgeCode(res);
+                $('#mymodel').modal('show')
                 console.log(res);
             },
             error:function(res){
@@ -141,7 +196,9 @@
 
             },
             success:function(res){
+                $("#text").html("3.2.2.15.非对称解密接口");
                 JudgeCode(res);
+                $('#mymodel').modal('show')
                 console.log(res);
             },
             error:function(res){
@@ -157,7 +214,9 @@
 
             },
             success:function(res){
+                $("#text").html("3.2.2.16.数字信封加密接口");
                 JudgeCode(res);
+                $('#mymodel').modal('show')
                 console.log(res);
             },
             error:function(res){
@@ -173,7 +232,9 @@
 
             },
             success:function(res){
+                $("#text").html("3.2.2.17.数字信封解密接口");
                 JudgeCode(res);
+                $('#mymodel').modal('show')
                 console.log(res);
             },
             error:function(res){
