--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -123,16 +123,13 @@
 </body>
 <script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
 <script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="/javascripts/ajax.js" type="text/javascript"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script>
-    function JudgeCode(res){
-        $("#text1").html("code:"+res.code);
-        $("#text2").html("msg:"+res.msg);
-        $("#text3").html("data:"+res.data);
-    }
+
     function EncryptFile(){
         $.ajax({
-            url:"/RS_EncryptFile",
+            url:commonUrl+"/RS_EncryptFile",
             type:"post",
             data:{
                 souceFilePath:$("#surEncryption").val(),
@@ -151,7 +148,7 @@
     }
     function DevryptFile(){
         $.ajax({
-            url:"/RS_DevryptFile",
+            url:commonUrl+"/RS_DevryptFile",
             type:"post",
             data:{
                 rsKey:$("#symmetricKey").val(),
@@ -171,7 +168,7 @@
     }
     function KeyEncryptData(){
         $.ajax({
-            url:"/RS_KeyEncryptData",
+            url:commonUrl+"/RS_KeyEncryptData",
             type:"post",
             data:{
                 rsKey:"123",
@@ -190,7 +187,7 @@
     }
     function KeyDecryptData(){
         $.ajax({
-            url:"/RS_KeyDecryptData",
+            url:commonUrl+"/RS_KeyDecryptData",
             type:"post",
             data:{
 
@@ -208,7 +205,7 @@
     }
     function KeyEncryptByDigitalEnvelope(){
         $.ajax({
-            url:"/RS_KeyEncryptByDigitalEnvelope",
+            url:commonUrl+"/RS_KeyEncryptByDigitalEnvelope",
             type:"post",
             data:{
 
@@ -226,10 +223,9 @@
     }
     function KeyDecryptByDigitalEnvelope(){
         $.ajax({
-            url:"/RS_KeyDecryptByDigitalEnvelope",
+            url:commonUrl+"/RS_KeyDecryptByDigitalEnvelope",
             type:"post",
             data:{
-
             },
             success:function(res){
                 $("#text").html("3.2.2.17.数字信封解密接口");
