--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -155,53 +155,60 @@
 </body>
 <script src="https://cdn.bootcss.com/html5shiv/r29/html5.js"></script>
 <script src="https://libs.baidu.com/jquery/1.9.1/jquery.min.js"></script>
+<script src="/javascripts/ajax.js" type="text/javascript"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script type="text/javascript">
-    function JudgeCode(res){
-        $("#text1").html("code:"+res.code);
-        $("#text2").html("msg:"+res.msg);
-        $("#text3").html("data:"+res.data);
-    }
     function ConfigParameters(){
-        $.ajax({
-            url:"/RS_ConfigParameters",
-            type:"get",
-            data:{
-                cmd:$("#cmd").val(),
-                val:$("#val").val(),
-            },
-            success:function(res){
-                $("#text").html("3.2.1.1.参数配置接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
-        });
+        let url=commonUrl+"/RS_ConfigParameters";
+        let data={
+            cmd:$("#cmd").val(),
+            val:$("#val").val()
+        }
+        ajax(url, data,false,false, false, false, 'get','json');
+//        $.ajax({
+//            url:"/RS_ConfigParameters",
+//            type:"get",
+//            data:{
+//                cmd:$("#cmd").val(),
+//                val:$("#val").val(),
+//            },
+//            success:function(res){
+//                $("#text").html("3.2.1.1.参数配置接口");
+//                JudgeCode(res);
+//                $('#mymodel').modal('show')
+//                console.log(res);
+//            },
+//            error:function(res){
+//                console.log(res);
+//            }
+//        });
     }
     function GetParameters(){
-        $.ajax({
-            url:"/RS_GetParameters",
-            type:"post",
-            data:{
-                cmd:$("#get-cmd").val(),
-            },
-            success:function(res){
-                $("#text").html("3.2.1.2.获取配置参数接口");
-                JudgeCode(res);
-                $('#mymodel').modal('show')
-                console.log(res);
-            },
-            error:function(res){
-                console.log(res);
-            }
-        });
+        let url=commonUrl+"/RS_GetParameters";
+        let data={
+            cmd:$("#get-cmd").val(),
+        }
+        ajax(url, data,false,false, false, false, 'post','json');
+//        $.ajax({
+//            url:commonUrl+"/RS_GetParameters",
+//            type:"post",
+//            data:{
+//                cmd:$("#get-cmd").val(),
+//            },
+//            success:function(res){
+//                $("#text").html("3.2.1.2.获取配置参数接口");
+//                JudgeCode(res);
+//                $('#mymodel').modal('show')     
+//                console.log(res);
+//            },
+//            error:function(res){
+//                console.log(res);
+//            }
+//        });
     }
     function RCode(){
         $.ajax({
-            url:"/RS_GreateQRCode",
+            url:commonUrl+"/RS_GreateQRCode",
             type:"post",
             data:{
                 qrcode:$("img-content").val(),
@@ -220,7 +227,7 @@
     }
     function Transid(){
         $.ajax({
-            url:"/RS_GetTransid",
+            url:commonUrl+"/RS_GetTransid",
             type:"post",
             data:{
                 joinCode:"123142",
@@ -238,7 +245,7 @@
     }
     function GetUserList(){
         $.ajax({
-            url:"/RS_GetUserList",
+            url:commonUrl+"/RS_GetUserList",
             type:"get",
             data:{
             },
@@ -256,7 +263,7 @@
 
     function GetCertBase64String(){
         $.ajax({
-            url:"/RS_GetCertBase64String",
+            url:commonUrl+"/RS_GetCertBase64String",
             type:"post",
             data:{
                 certType:"1",
@@ -276,7 +283,7 @@
 
     function GetCertInfo(){
         $.ajax({
-            url:"/RS_GetCertInfo",
+            url:commonUrl+"/RS_GetCertInfo",
             type:"post",
             data:{
                 certBase64:"123142",
@@ -296,7 +303,7 @@
 
     function CertLogin(){
         $.ajax({
-            url:"/RS_CertLogin",
+            url:commonUrl+"/RS_CertLogin",
             type:"post",
             data:{
                 containerId:"123142",
@@ -316,7 +323,7 @@
 
     function GetPinRetryCount(){
         $.ajax({
-            url:"/RS_GetPinRetryCount",
+            url:commonUrl+"/RS_GetPinRetryCount",
             type:"post",
             data:{
                 containerId:"123142"
@@ -335,7 +342,7 @@
 
     function changePwd(){
         $.ajax({
-            url:"/RS_ChangePassWd",
+            url:commonUrl+"/RS_ChangePassWd",
             type:"get",
             data:{
 
@@ -354,7 +361,7 @@
 
     function VerifyIdentity(){
         $.ajax({
-            url:"/RS_VerifyIdentity",
+            url:commonUrl+"/RS_VerifyIdentity",
             type:"post",
             data:{
                 certBase64:"123",
@@ -376,7 +383,7 @@
 
     function KeyGetKeySn(){
         $.ajax({
-            url:"/RS_KeyGetKeySn",
+            url:commonUrl+"/RS_KeyGetKeySn",
             type:"get",
             data:{
             },
