--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -16,11 +16,11 @@
         <div class="panel-body">
             <div class="form-group">
                 <label for="recipient-name" class="control-label">待加密文件路径，带文件名:</label>
-                <input type="text" class="form-control" id="surEncryption">
+                <input type="file" id="surEncryption">
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">加密后文件保存路径，带文件名:</label>
-                <input type="text" class="form-control" id="encryption">
+                <input type="text" class="form-control" id="encryption" value="/file/test.txt" disabled>
             </div>
             <button type="button" class="btn btn-primary" onclick="EncryptFile()">对称加密</button>
         </div>
@@ -33,11 +33,11 @@
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">加密文件路径，带文件名:</label>
-                <input type="text" class="form-control" id="encryption2">
+                <input type="file" id="encryption2">
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">解密后文件保存路径，带文件名:</label>
-                <input type="text" class="form-control" id="decryptedFiles">
+                <input type="text" class="form-control" id="decryptedFiles" value="/file/test.txt" disabled>
             </div>
             <button type="button" class="btn btn-primary" onclick="DevryptFile()">对称解密</button>
         </div>
