--- a/myapp/views/interface.ejs
+++ b/myapp/views/interface.ejs
@@ -10,7 +10,7 @@
 <body>
 <div class="container">
     <div class="top">
-        <h2><a href="/">接口测试</a> / <a href="/secret">接口测试2</a> / 接口测试3</h2>
+        <h2><a href="/">接口测试</a> / <a href="/secret">接口测试（加解密）</a> / 接口测试（签名验签）</h2>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
