--- a/myapp/views/secret.ejs
+++ b/myapp/views/secret.ejs
@@ -10,19 +10,21 @@
 <body>
 <div class="container">
     <div class="top">
-        <h2><a href="/">接口测试</a> / 接口测试2 / <a href="/interface">接口测试3</a></h2>
+        <h2><a href="/">接口测试</a> / 接口测试（加解密） / <a href="/interface">接口测试（签名验签）</a></h2>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="form-group">
                 <label for="recipient-name" class="control-label">待加密文件路径，带文件名:</label>
-                <input type="file" id="surEncryption">
+                <input type="text" class="form-control" id="surEncryption" value="/file/test.txt" disabled>
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">加密后文件保存路径，带文件名:</label>
                 <input type="text" class="form-control" id="encryption" value="/file/test.txt" disabled>
             </div>
             <button type="button" class="btn btn-primary" onclick="EncryptFile()">对称加密</button>
+            <button type="button" class="btn btn-primary" onclick="EncryptFile()">查看待加密文件</button>
+            <button type="button" class="btn btn-primary" onclick="EncryptFile()">查看加密文件</button>
         </div>
     </div>
     <div class="panel panel-default">
@@ -33,13 +35,15 @@
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">加密文件路径，带文件名:</label>
-                <input type="file" id="encryption2">
+                <input type="text" class="form-control" id="encryption2" value="/file/test.txt" disabled>
             </div>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">解密后文件保存路径，带文件名:</label>
                 <input type="text" class="form-control" id="decryptedFiles" value="/file/test.txt" disabled>
             </div>
             <button type="button" class="btn btn-primary" onclick="DevryptFile()">对称解密</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
         </div>
     </div>
     <div class="panel panel-default">
@@ -68,39 +72,40 @@
         <div class="panel-body">
             <div class="form-group">
                 <label for="souceFilePath" class="control-label">原文路径，带文件名:</label>
-                <input type="text" class="form-control" id="souceFilePath">
+                <input type="text" class="form-control" id="souceFilePath" value="/file/test.txt" disabled>
             </div>
             <div class="form-group">
                 <label for="encFilePath" class="control-label">加密后的密文保存路径，带文件名:</label>
-                <input type="text" class="form-control" id="encFilePath">
+                <input type="text" class="form-control" id="encFilePath" value="/file/test.txt" disabled>
             </div>
             <div class="form-group">
                 <label for="certBase" class="control-label">证书base64编码:</label>
                 <input type="text" class="form-control" id="certBase">
             </div>
             <button type="button" class="btn btn-primary" onclick="KeyEncryptByDigitalEnvelope()">数字信封加密</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
             <div class="form-group">
                 <label for="encFilePath2" class="control-label">要解密的文件路径，带文件名:</label>
-                <input type="text" class="form-control" id="encFilePath2">
+                <input type="text" class="form-control" id="encFilePath2" value="/file/test.txt" disabled>
             </div>
             <div class="form-group">
                 <label for="dncDirectory" class="control-label">解密后文件保存路径，不带文件名:</label>
-                <input type="text" class="form-control" id="dncDirectory">
+                <input type="text" class="form-control" id="dncDirectory" value="/file/test.txt" disabled>
             </div>
             <div class="form-group">
                 <label for="encRsKeyPath" class="control-label">对称密钥信息文件路径，带文件名:</label>
-                <input type="text" class="form-control" id="encRsKeyPath">
+                <input type="text" class="form-control" id="encRsKeyPath" value="/file/test.txt" disabled>
             </div>
             <button type="button" class="btn btn-primary" onclick="KeyDecryptByDigitalEnvelope()">数字信封解密</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看加密文件</button>
+            <button type="button" class="btn btn-primary" onclick="DevryptFile()">查看解密文件</button>
         </div>
     </div>
-
-
-
     <div class="modal fade" tabindex="-1" role="dialog" id="mymodel">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
