--- a/myapp/views/index.ejs
+++ b/myapp/views/index.ejs
@@ -29,10 +29,17 @@
             <div class="form-group">
                 <textarea class="form-control" id="ConfigParametersTxt" cols="150" rows="5"></textarea>
             </div>
+            <div class="form-group">
+                <input value="" type="text" class="form-control" id="ConfigParametersData">
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default" onClick="copy(ConfigParametersData)">复制data数据</button>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>2、获取配置参数接口</h4>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">命令标识:</label>
                 <input type="text" class="form-control" id="get-cmd">
@@ -43,10 +50,17 @@
             <div class="form-group">
                 <textarea class="form-control" id="GetParametersTxt" cols="150" rows="5"></textarea>
             </div>
+            <div class="form-group">
+                <input value="" type="text" class="form-control" id="GetParametersData">
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default" onClick="copy(GetParametersData)">复制data数据</button>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>3、请求二维码接口</h4>
             <div class="form-group">
                 <label for="recipient-name" class="control-label">二维码图片内容:</label>
                 <input type="text" class="form-control" id="img-content">
@@ -61,11 +75,17 @@
             <div class="form-group">
                 <textarea class="form-control" id="RCodeTxt" cols="150" rows="5"></textarea>
             </div>
-
+            <div class="form-group">
+                <input value="" type="text" class="form-control" id="RCodeData">
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default" onClick="copy(RCodeData)">复制data数据</button>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>4、获取流水号接口</h4>
             <div class="form-group">
                 <label for="Numbering" class="control-label">接入方编号:</label>
                 <input type="text" class="form-control" id="Numbering">
@@ -76,28 +96,41 @@
             <div class="form-group">
                 <textarea class="form-control" id="TransidTxt" cols="150" rows="5"></textarea>
             </div>
+            <div class="form-group">
+                <input value="" type="text" class="form-control" id="TransidData">
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default" onClick="copy(TransidData)">复制data数据</button>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>5、获取证书列表接口</h4>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="GetUserList()">获取证书列表接口</button>
             </div>
             <div class="form-group">
                 <textarea class="form-control" id="GetUserListTxt" cols="150" rows="5"></textarea>
             </div>
-
+            <div class="form-group">
+                <input value="" type="text" class="form-control" id="GetUserListData">
+            </div>
+            <div class="form-group">
+                <button type="button" class="btn btn-default" onClick="copy(GetUserListData)">复制data数据</button>
+            </div>
         </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>6、获取数字证书接口</h4>
             <div class="form-group">
                 <label for="certType" class="control-label">1(签名证书)，2(加密证书):</label>
                 <input type="text" class="form-control" id="certType">
             </div>
             <div class="form-group">
-                <label for="containerId2" class="control-label">容器名，可为空:</label>
-                <input type="text" class="form-control" id="containerId2">
+                <label for="containerId3" class="control-label">唯一标识:</label>
+                <input type="text" class="form-control" id="containerId3">
             </div>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="GetCertBase64String()">获取数字证书接口</button>
@@ -110,6 +143,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>7、获取证书信息接口</h4>
             <div class="form-group">
                 <label for="certBase64" class="control-label">证书base64编码:</label>
                 <input type="text" class="form-control" id="certBase64">
@@ -129,6 +163,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>8、证书口令验证接口</h4>
             <div class="form-group">
                 <label for="containerId" class="control-label">唯一标识，可为空:</label>
                 <input type="text" class="form-control" id="containerId">
@@ -148,6 +183,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>9、获取密码重试剩余次数接口</h4>
             <div class="form-group">
                 <label for="containerId2" class="control-label">唯一标识:</label>
                 <input type="text" class="form-control" id="containerId2">
@@ -163,6 +199,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>10、验证证书有效性接口</h4>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="VerifyIdentity()">验证证书有效性接口</button>
             </div>
@@ -174,6 +211,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
+            <h4>11、获取证书用户标识接口</h4>
             <div class="form-group">
                 <label for="certBase" class="control-label">证书base64编码:</label>
                 <input type="text" class="form-control" id="certBase">
@@ -193,7 +231,7 @@
     </div>
     <div class="panel panel-default">
         <div class="panel-body">
-
+            <h4>12、获取证书用户标识</h4>
             <div class="form-group">
                 <button type="button" class="btn btn-primary" onclick="changePwd()">获取证书用户标识</button>
             </div>
@@ -209,6 +247,27 @@
 <script src="/javascripts/ajax.js" type="text/javascript"></script>
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 <script type="text/javascript">
+    function copy(e){
+        //获取input对象
+        var obj = document.getElementById(e.id);
+        console.log(obj)
+        //选择当前对象
+        obj.select();
+        try{
+            //进行复制到剪切板
+            if(document.execCommand("Copy","true",null)){
+                //如果复制成功
+                alert("复制成功！");
+            }else{
+                //如果复制失败
+                alert("复制失败！");
+            }
+        }catch(err){
+            //如果报错
+            alert("复制错误！")
+        }
+    }
+
     //3.2.1.1.参数配置接口
     function ConfigParameters(){
 //        let url=commonUrl+"/RS_ConfigParameters";
@@ -226,10 +285,8 @@
                 val:$("#val").val(),
             },
             success:function(res){
-//                $("#text").html("3.2.1.1.参数配置接口");
-//                JudgeCode(res);
-//                $('#mymodel').modal('show')
-                var smg=JSON.stringify(res);
+                document.getElementById("ConfigParametersData").value = res.data;
+                var smg=JSON.stringify(res,null,3);
                 document.getElementById("ConfigParametersTxt").innerHTML = smg;
                 console.log(res);
             },
@@ -252,7 +309,8 @@
                 cmd:$("#get-cmd").val(),
             },
             success:function(res){
-                var smg=JSON.stringify(res);
+                document.getElementById("GetParametersData").value = res.data;
+                var smg=JSON.stringify(res,null,3);
                 document.getElementById("GetParametersTxt").innerHTML = smg;
                 console.log(res);
             },
@@ -271,8 +329,10 @@
                 path:$("img-path").val()
             },
             success:function(res){
-                var smg=JSON.stringify(res);
+                document.getElementById("RCodeData").value = res.data;
+                var smg=JSON.stringify(res,null,3);
                 document.getElementById("RCodeTxt").innerHTML = smg;
+
                 console.log(res);
             },
             error:function(res){
@@ -289,7 +349,8 @@
                 joinCode:"123142",
             },
             success:function(res){
-                var smg=JSON.stringify(res);
+                document.getElementById("TransidData").value = res.data;
+                var smg=JSON.stringify(res,null,3);
                 document.getElementById("TransidTxt").innerHTML = smg;
                 console.log(res);
             },
@@ -306,8 +367,12 @@
             data:{
             },
             success:function(res){
-                var smg=JSON.stringify(res);
+                document.getElementById("GetUserListData").value = res.data;
+                var smg=JSON.stringify(res,null,3);
                 document.getElementById("GetUserListTxt").innerHTML = smg;
+                $("#containerId").val(res.data);
+                $("#containerId2").val(res.data);
+                $("#containerId3").val(res.data);
                 console.log(res);
             },
             error:function(res){
